--- a/private/deploy/settings.json
+++ b/private/deploy/settings.json
@@ -1,5 +1,12 @@
 {
   "public": {
+    "LandingPages" : [
+      {"name" : "Buy a hot toys", "value" : "https://tr.im/NFeYvJQR7"},
+      {"name" : "Sex toys for couples", "value" : "https://tr.im/VrJ27Mj6Q"},
+      {"name" : "Huge big vibrator sex toys for woman", "value" : "https://tr.im/7eUvJEqZn"},
+      {"name" : "Huge anal toys", "value" : "https://tr.im/33rRBIImQ"},
+      {"name" : "Japanese silicone sex dolls", "value" : "https://tr.im/EWBz1"}
+    ]
   },
   "private": {
     "Tumblr" : {
