--- a/private/deploy/settings.json
+++ b/private/deploy/settings.json
@@ -1,11 +1,11 @@
 {
   "public": {
     "LandingPages" : [
-      {"name" : "Buy a hot toys", "value" : "https://tr.im/NFeYvJQR7"},
-      {"name" : "Sex toys for couples", "value" : "https://tr.im/VrJ27Mj6Q"},
-      {"name" : "Huge big vibrator sex toys for woman", "value" : "https://tr.im/7eUvJEqZn"},
-      {"name" : "Huge anal toys", "value" : "https://tr.im/33rRBIImQ"},
-      {"name" : "Japanese silicone sex dolls", "value" : "https://tr.im/EWBz1"}
+      {"name" : "Buy a hot toys", "value" : "https://tr.im/iyjimYVR7"},
+      {"name" : "Sex toys for couples", "value" : "https://tr.im/meYFmIeYV"},
+      {"name" : "Huge big vibrator sex toys for woman", "value" : "https://tr.im/iqVzBe27U"},
+      {"name" : "Huge anal toys", "value" : "https://tr.im/aIIAURZjA"},
+      {"name" : "Japanese silicone sex dolls", "value" : "https://tr.im/ju3fuVv3J"}
     ]
   },
   "private": {
