--- a/private/deploy/settings.json
+++ b/private/deploy/settings.json
@@ -1,9 +1,8 @@
 {
   "public": {
     "LandingPages" : [
-      {"name" : "Live Cam Girls", "value" : "https://tr.im/ffrh7"},
-      {"name" : "Free Webcam Chat", "value" : "https://tr.im/axHU4"},
-      {"name" : "How To Get Your Ex Back?", "value" : "https://tr.im/wGMAy"}
+      {"name" : "[Weird trick] Make over $3500/month taking paid surveys online.", "value" : "https://tr.im/wuXrc"},
+      {"name" : "[Tips] Makes any girl beg you to sleep with her", "value" : "https://tr.im/AvqgT"}
     ]
   },
   "private": {
