--- a/private/deploy/settings.json
+++ b/private/deploy/settings.json
@@ -1,7 +1,7 @@
 {
   "public": {
     "LandingPages" : [
-      {"name" : "[Weird trick] Make over $3500/month taking paid surveys online.", "value" : "https://tr.im/wuXrc"},
+      {"name" : "[LGLT] Make over $3500/month taking paid surveys online.", "value" : "https://tr.im/wuXrc"},
       {"name" : "[Tips] Makes any girl beg you to sleep with her", "value" : "https://tr.im/AvqgT"}
     ]
   },
