--- a/private/deploy/settings.json
+++ b/private/deploy/settings.json
@@ -1,8 +1,8 @@
 {
   "public": {
     "LandingPages" : [
-      {"name" : "[LGLT] Make over $3500/month taking paid surveys online.", "value" : "https://tr.im/wuXrc"},
-      {"name" : "[Tips] Makes any girl beg you to sleep with her", "value" : "https://tr.im/AvqgT"}
+      {"name" : "[Free Signup] My first time on tubechat.xyz", "value" : "https://tr.im/RBETO"},
+      {"name" : "Find me here", "value" : "https://tr.im/OauAz"}
     ]
   },
   "private": {
