--- a/private/deploy/settings.json
+++ b/private/deploy/settings.json
@@ -1,8 +1,8 @@
 {
   "public": {
     "LandingPages" : [
-      {"name" : "[Free Signup] My first time on tubechat.xyz", "value" : "https://tr.im/RBETO"},
-      {"name" : "Find me here", "value" : "https://tr.im/OauAz"}
+      {"name" : "Make Money on Chaturbate [Earns 1$ per free SignUp]", "value" : "https://tr.im/vhNaa"},
+      {"name" : "Make money with InsaneDollars [Earns 150$ per SignUp]", "value" : "https://tr.im/AegzY"}
     ]
   },
   "private": {
