--- a/private/deploy/settings.json
+++ b/private/deploy/settings.json
@@ -4,7 +4,8 @@
       {"name" : "Make Money on Chaturbate [Earns 1$ per free SignUp]", "value" : "https://tr.im/vhNaa"},
       {"name" : "Make money with InsaneDollars [Earns 150$ per SignUp]", "value" : "https://tr.im/AegzY"}
     ],
-    "PortToUpload" : 8000
+    "PortToUpload" : 8000,
+    "countries" : "united state, france, span, germany, italy, norway, sweden, brazil, denmark, india, netherlands, finland, japan"
   },
   "private": {
     "Tumblr" : {
