--- a/private/deploy/settings.json
+++ b/private/deploy/settings.json
@@ -5,7 +5,7 @@
       {"name" : "Make money with InsaneDollars [Earns 150$ per SignUp]", "value" : "https://tr.im/AegzY"}
     ],
     "PortToUpload" : 8000,
-    "countries" : "united state, france, span, germany, italy, norway, sweden, brazil, denmark, india, netherlands, finland, japan"
+    "countries" : "united-state, france, span, germany, italy, norway, sweden, brazil, denmark, india, netherlands, finland, japan"
   },
   "private": {
     "Tumblr" : {
