--- a/private/deploy/settings.json
+++ b/private/deploy/settings.json
@@ -1,8 +1,7 @@
 {
   "public": {
     "LandingPages" : [
-      {"name" : "Make Money on Chaturbate [Earns 1$ per free SignUp]", "value" : "https://tr.im/vhNaa"},
-      {"name" : "Make money with InsaneDollars [Earns 150$ per SignUp]", "value" : "https://tr.im/AegzY"}
+      {"name" : "Horny Amateurs on Cam", "value" : "https://tr.im/p0rnhunt"}
     ],
     "PortToUpload" : 8000,
     "countries" : "united-state, france, span, germany, italy, norway, sweden, brazil, denmark, india, netherlands, finland, japan"
